Fix 100vh issue on mobile

--- a/packages/bulletin/assets/css/screen.css
+++ b/packages/bulletin/assets/css/screen.css
@@ -438,11 +438,16 @@
 @media (max-width: 991px) {
     .gh-home {
         grid-template-columns: 1fr;
+        height: auto;
     }
 
     .gh-home-cta,
     .gh-home-latest {
         height: 100vh;
+    }
+
+    .gh-home-cta {
+        height: var(--inner-height);
     }
 
     .gh-home-footer {
